# gooroom-volume-plugin

./: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.ac.in
debian/: changelog  control  copyright  rules
icons/: Makefile.am  Makefile.in
icons/22x22/status/: Makefile.am
icons/24x24/status/: Makefile.am
icons/32x32/status/: Makefile.am
icons/scalable/: Makefile.am  Makefile.in
icons/scalable/apps/: Makefile.am  Makefile.in
icons/scalable/status/: Makefile.am  Makefile.in
panel-plugin/: Makefile.am  Makefile.in  gresource.xml  pulseaudio-config.c  pulseaudio-config.h  pulseaudio-volume.c  volume-plugin.c  volume-plugin.desktop.in.in  volume-plugin.h  volume-window.ui
po/: POTFILES.in  POTFILES.skip  en_GB.po  en_US.po  ko.po
