iconsdir = $(datadir)/icons/hicolor/24x24/status
icons_DATA = \
    audio-volume-zero-panel-symbolic.png           \
    audio-volume-low-panel-symbolic.png           \
    audio-volume-medium-panel-symbolic.png        \
    audio-volume-high-panel-symbolic.png          \
    audio-volume-muted-panel-symbolic.png

EXTRA_DIST = $(icons_DATA)
