iconsdir = $(datadir)/icons/hicolor/scalable/status
icons_DATA =								\
    audio-volume-zero-panel-symbolic.svg           \
    audio-volume-low-panel-symbolic.svg           \
    audio-volume-medium-panel-symbolic.svg        \
    audio-volume-high-panel-symbolic.svg          \
    audio-volume-muted-panel-symbolic.svg

EXTRA_DIST =								\
	$(icons_DATA)
