iconsdir = $(datadir)/icons/hicolor/scalable/status
icons_DATA = \
    gooroom-volume-zero-panel-symbolic.svg   \
    gooroom-volume-low-panel-symbolic.svg    \
    gooroom-volume-medium-panel-symbolic.svg \
    gooroom-volume-high-panel-symbolic.svg   \
    gooroom-volume-muted-panel-symbolic.svg  \
    gooroom-volume-zero-symbolic.svg   \
    gooroom-volume-low-symbolic.svg    \
    gooroom-volume-medium-symbolic.svg \
    gooroom-volume-high-symbolic.svg   \
    gooroom-volume-muted-symbolic.svg

EXTRA_DIST = $(icons_DATA)
